# Rx8-Digital-Dash

./: .gitattributes  CMakeLists.txt  Can load  Cardash.files  Cardash.qmlproject  Cardash.qmlproject.qtds  Cardash.qmlproject.qtds.f96dedc  README.md  dashboard.files  main.qml  qmlmodules
asset_imports/Quick3DAssets/: CMakeLists.txt
asset_imports/Quick3DAssets/Badge/: Badge.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Badge/meshes/: node.mesh
asset_imports/Quick3DAssets/Badge/source scene/: badge.stl
asset_imports/Quick3DAssets/Mazda_RX8/: CMakeLists.txt  Mazda_RX8.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Mazda_RX8/meshes/: chrome.mesh  chrome_lamps.mesh  glass.mesh  glass_clear.mesh  glass_red.mesh  glass_white.mesh  glass_yellow.mesh  numberplate.mesh  plane001.mesh  plastic_matt.mesh
content/: App.qml  CMakeLists.txt  Screen01.ui.qml
imports/: CMakeLists.txt
imports/Cardash/: CMakeLists.txt  Constants.qml  qmldir
imports/Cardash/designer/: plugin.metainfo
src/: can.cpp  can.h  import_qml_plugins.h  main.cpp
